--- a/ServerFileManagerConsole/ServerFileManagerConsole.csproj
+++ b/ServerFileManagerConsole/ServerFileManagerConsole.csproj
@@ -7,4 +7,18 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Costura.Fody">
+        <Version>6.0.0-beta0000</Version>
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Serilog">
+        <Version>4.1.0-dev-02238</Version>
+      </PackageReference>
+      <PackageReference Include="Serilog.Sinks.Console">
+        <Version>6.0.0</Version>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
