--- a/ServerFileManagerConsole/ServerFileManagerConsole.csproj
+++ b/ServerFileManagerConsole/ServerFileManagerConsole.csproj
@@ -5,14 +5,14 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+
+        <PublishSingleFile>true</PublishSingleFile>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+        <PublishTrimmed>true</PublishTrimmed>
+
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Costura.Fody">
-        <Version>6.0.0-beta0000</Version>
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
       <PackageReference Include="Serilog">
         <Version>4.1.0-dev-02238</Version>
       </PackageReference>
